Remove the quotes from the IP
Functest complains that it cannot connect to the installer because it does
not understand the ip or hostname. The cause for this is the quotes in the
template

Change-Id: I75c30b7f1bbcee3f968692b4347ceb13ab1131d2
Signed-off-by: Manuel Buil <mbuil@suse.com>

--- a/xci/playbooks/roles/prepare-functest/templates/env.j2
+++ b/xci/playbooks/roles/prepare-functest/templates/env.j2
@@ -1,4 +1,4 @@
 INSTALLER_TYPE=osa
-INSTALLER_IP="192.168.122.2"
+INSTALLER_IP=192.168.122.2
 EXTERNAL_NETWORK="{{ external_network }}"
 DEPLOY_SCENARIO="os-nosdn-nofeature-noha"
